add: header styles

--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:opsz@14..32&family=Roboto:wght@100..900&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,500&family=Roboto:wght@100..900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Taplink</title>
 </head>
 
 <body>
+  <div class="page-wrapper">
+    <header class="header">
+      <strong class="hello">Привет 👋</strong>
+      <p class="hello-text">Делаю сайты на заказ:
+        <br>дизайн, код, продвижение.
+      </p>
+    </header>
+  </div>
+  <!-- /.page-wrapper -->
   <script src="js/main.js"></script>
 </body>
 
