--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
         <br>дизайн, код, продвижение.
       </p>
     </header>
+    <div class="container">
+      <div class="user">
+        <img width="76" height="76" src="img/avatar.png" alt="Юрий Лябин" class="user-avatar">
+        <h1 class="user-name">Юрий Лябин</h1>
+        <p class="user-description">Разработчик сайтов</p>
+      </div>
+      <!-- /.user -->
+    </div>
+    <!-- /.container -->
   </div>
   <!-- /.page-wrapper -->
   <script src="js/main.js"></script>
