--- a/index.html
+++ b/index.html
@@ -31,6 +31,28 @@
         <p class="user-description">Разработчик сайтов</p>
       </div>
       <!-- /.user -->
+      <div class="card">
+        <div class="buttons">
+          <a href="#" class="button vk">
+            <img src="img/icons/vk.svg" alt="">
+          </a>
+          <a href="#" class="button tg">
+            <img src="img/icons/tg.svg" alt="">
+          </a>
+          <a href="#" class="button yt">
+            <img src="img/icons/yt.svg" alt="">
+          </a>
+        </div>
+        <a href="https://github.com/SNDMN512" class="button">
+          <img src="img/icons/github.svg" alt="">
+          <span class="button-text">Profile Github</span>
+        </a>
+        <a href="https://chelyabinsk.hh.ru/applicant/resumes" class="button hh">
+          <span class="button-text">Резюме</span>
+        </a>
+        <!-- /.buttons -->
+      </div>
+      <!-- /.card -->
     </div>
     <!-- /.container -->
   </div>
