--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a href="#" class="button vk">
             <img src="img/icons/vk.svg" alt="">
           </a>
-          <a href="#" class="button tg">
+          <a href="https://t.me/yuriymask" class="button tg">
             <img src="img/icons/tg.svg" alt="">
           </a>
           <a href="#" class="button yt">
